Correct color value for contrast-90pct

--- a/user-interface/frontend/themes/datamanager/components/all.css
+++ b/user-interface/frontend/themes/datamanager/components/all.css
@@ -165,7 +165,7 @@ Font classes that provide more flexibility
 }
 
 .text-contrast-90pct {
-  color: var(--lumo-contrast-70pct)
+  color: var(--lumo-contrast-90pct)
 }
 
 .text-line-height-s {
